# app

./: pyproject.toml
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: login.py  user.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_process_model.py  crud_user.py
app/models/: __init__.py  base.py  configuration.py  model.py  user.py
app/schemas/: __init__.py  base.py  user.py
